adding first unit test

--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "author": "Brandon Kimbrough",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.6",
     "@types/node": "^11.13.9",
+    "aws-sdk-mock": "^4.4.0",
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.5"
   },
