--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "outDir": "./dist",
     "strict": true,
-    "baseUrl": "./",
+    "baseUrl": "./src",
     "typeRoots": [
       "node_modules/@types"
     ],
