--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aws-sdk-mock": "^4.4.0",
     "chai": "^4.2.0",
     "mocha": "^6.1.4",
+    "nyc": "^14.1.1",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.5"
   },
