--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.6",
     "@types/node": "^11.13.9",
+    "@types/sinon": "^7.0.12",
     "aws-sdk-mock": "^4.4.0",
     "chai": "^4.2.0",
     "mocha": "^6.1.4",
     "nyc": "^14.1.1",
+    "sinon": "^7.3.2",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.5"
   },
