--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/async": "~2.4.1",
+    "@types/aws-lambda": "^8.10.27",
     "@types/chai": "~4.1.7",
     "@types/mocha": "~5.2.6",
     "@types/node": "~11.13.9",
     "@types/sinon": "~7.0.12",
     "@types/uuid": "~3.4.4",
+    "aws-sdk": "~2.437.0",
     "aws-sdk-mock": "~4.4.0",
     "chai": "~4.2.0",
     "mocha": "~6.1.4",
@@ -32,8 +34,7 @@
     "ts-node": "~8.2.0",
     "typescript": "~3.5.1",
     "webpack": "~4.33.0",
-    "webpack-cli": "~3.3.3",
-    "aws-sdk": "~2.437.0"
+    "webpack-cli": "~3.3.3"
   },
   "dependencies": {
     "async": "~2.6.2"
